--- a/views/friendsremove.hbs
+++ b/views/friendsremove.hbs
@@ -1,3 +1,5 @@
+{{!-- page to allow the user to remove a certain friend --}}
+
 {{>navbar page="friends" subpage="remove"}}
 
 <div class="container">
