--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,3 +1,11 @@
+{{!-- the navigation bar  --}}
+
+<style>
+    .navbar {
+        background-color: rgb(40, 40, 40);
+    }
+</style>
+
 <nav class="navbar navbar-expand-md navbar-dark fixed-top">
     <img src="../../public/img/MichaelL.png" style="height: 35px; width:35px; margin-right:10px">
     <a class="navbar-brand" href="/" style="color:greenyellow">MyCoolApp</a>
