--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,5 +1,6 @@
-{{>navbar page="profile"}}
+{{!-- the profile page to allow the user to view or change their personal details --}}
 
+{{>navbar page="profile"}}
 
 <div class="container">
     {{#if errors}}
