--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,17 +1,8 @@
-.message-log {
-    height: 360px;
-    width: 100%;
-    background-color: rgb(40, 40, 40);
-    overflow-y: auto;
-    overflow-wrap: break-word;
-    box-sizing: border-box;
-    border-radius: 5px;
-}
+/* some global css */
 
 * {
-    color: white;
+    color: #ffffff;
 }
-
 
 body {
     padding-top: 80px;
@@ -35,45 +26,13 @@ body {
     float: left;
 }
 
-.message-column-friends {
-    width: calc(80% - 2 * 10px);
-    height: 100%;
-    margin: 0 10px 0 10px;
-    box-sizing: border-box;
-}
-
-.message-column-groups {
-    width: calc(60% - 2 * 10px);
-    height: 100%;
-    margin: 0 10px 0 10px;
-    box-sizing: border-box;
-}
-
-.members-container {
-    width: calc(20% - 10px);
-    height: 475px;
-    overflow-x: hidden;
-    overflow-y: auto;
-    margin-right: 10px;
-    box-sizing: border-box;
-}
-
-.submit-textarea {
-    resize: none;
-    width: 80% !important;
-}
-
-.channels-container {
-    width: calc(20% - 10px);
-    height: 475px;
-    overflow-x: hidden;
-    overflow-y: auto;
-    margin-left: 10px;
-    box-sizing: border-box;
-}
-
-.navbar {
-    background-color: rgb(40, 40, 40);
+.column-title {
+    text-align: center;
+    color: black;
+    background-color:#D3D3D3;
+    font-weight: 500;
+    font-size: 20px;
+    padding: 10px;
 }
 
 .list-group-item {
@@ -92,15 +51,6 @@ body {
     box-shadow: 0 0 0 0.2rem rgba(0, 255, 34, 0.25);
 }
 
-.requests {
-    height: 460px;
-    overflow: hidden auto"
-}
-
-.btn-back {
-    margin-bottom: 20px;
-}
-
 ::-webkit-scrollbar{
     width:5px;
     background-color: white;
@@ -111,34 +61,6 @@ body {
     background: greenyellow;
     border-radius: 10px;
   }
-
-.jumbotron {
-    background-color: rgb(0,255,221);
-    background-image: url("../img/MichaelL.png");
-    background-image: url("../img/MichaelL.png"), linear-gradient(90deg, rgba(0,255,221,1) 25%, rgba(70,255,0,1) 67%, rgba(92,195,39,1) 100%);
-}
-
-.header-title {
-    color: greenyellow;
-    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
-    font-weight: 500;
-}
-
-.header-text {
-    color: white;
-    text-shadow: -0.75px -0.75px 0 #000, 0.75px -0.75px 0 #000, -0.75px 0.75px 0 #000, 0.75px 0.75px 0 #000;
-    font-weight: 400;
-}
-
-.home-left-column {
-    background-image: url("../img//ProGamer.png");
-    alt: "progamer";
-}
-
-img {
-    max-width:100%;
-    max-height:100%;
-}
 
 .modal-content {
     border: none;
