--- a/views/partials/invitemodal.hbs
+++ b/views/partials/invitemodal.hbs
@@ -1,10 +1,24 @@
+{{!-- form to invite friends to a group --}}
+
+<style>
+    .modal-content {
+        background-color: rgb(80, 80, 80);
+    }
+    .modal-header {
+        background-color: #218838;
+    }
+    .close span {
+        color:black;
+    }
+</style>
+
 <div class="modal fade" id="invite-modal" tabindex="-1" aria-labelledby="invite-modal-label" aria-hidden="false">
     <div class="modal-dialog">
-        <div class="modal-content" style="background-color: rgb(80, 80, 80);">
-            <div class="modal-header" style="background-color: #218838">
+        <div class="modal-content" style="">
+            <div class="modal-header" style="">
                 <h5 class="modal-title" id="invite-modal-label">Invite a Friend</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true" style="color:black">&times;</span>
+                    <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
@@ -29,6 +43,7 @@
 </div>
 
 <script>
+
     $("#invite-error-message").hide();
     $("#invite-success-message").hide();
     $("#invite-loading").hide();
@@ -37,12 +52,13 @@
         e.preventDefault();
 
         $("#invite-loading").show();
+        $("#invite-button").attr("disabled", true);
+
         $("#invite-error-message").hide();
         $("#invite-success-message").hide();
 
-
         //i know this is weird but i dont care
-        fetch("/groups/all/{{selectedChannelId}}/invite", 
+        fetch(`/groups/all/{{selectedChannelId}}/invite`, 
         { 
             method: "POST", 
             headers: {
@@ -63,12 +79,17 @@
                     $("#invite-success-message").show();
                     $("#invite-success-message").text(json.successMessage);
                 }
+
                 $("#invite-loading").hide();
+                $("#invite-button").removeAttr("disabled");
+
             })
             .catch(function(err) {
                 $("#invite-error-message").show();
                 $("#invite-error-message").text("something went very wrong!");
+
                 $("#invite-loading").hide();
+                $("#invite-button").removeAttr("disabled");
             })
         });
     });
