--- a/views/partials/leavemodal.hbs
+++ b/views/partials/leavemodal.hbs
@@ -1,10 +1,24 @@
+{{!-- confirmaton form for leaving the group --}}
+
+<style>
+    .modal-content {
+        background-color: rgb(80, 80, 80);
+    }
+    .modal-header {
+        background-color: red
+    }
+    .close span {
+        color:black
+    }
+</style>
+
 <div class="modal fade" id="leave-modal" tabindex="-1" role="dialog" aria-labelledby="leave-modal-label" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content" style="background-color: rgb(80, 80, 80);">
-      <div class="modal-header" style="background-color:red;">
+    <div class="modal-content">
+      <div class="modal-header">
         <h5 class="modal-title" id="leave-modal-label">Are you sure?</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true" style="color:black;">&times;</span>
+          <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
@@ -25,13 +39,15 @@
     $("#leave-loading").hide();
     $("#leave-button").on("click", function(e) {
         //dodgy javascript templating here as well
-        fetch("/groups/all/{{selectedChannelId}}/leave", { method: "POST" })
+        fetch(`/groups/all/{{selectedChannelId}}/leave`, { method: "POST" })
         .then(function(res) {
             $("#leave-loading").show();
+            $("#leave-button").attr("disabled", true);
             res.json()
             .then(function(json) {
                 if (json.promoteMember) {
                     $("#leave-loading").hide();
+                    $("#leave-button").removeAttr("disabled");
                     $("#leave-modal").modal("hide");
                     $("#promote-modal").modal("show");
                 }
@@ -39,7 +55,7 @@
         })
         .catch(function(err) {
             $("#leave-loading").hide();
-            console.error(err);
+            $("#leave-button").removeAttr("disabled");
         })
     });
 </script>
